# ZephyrOS

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
.github/workflows/: format-and-build.yml
kernel/: Cargo.toml
kernel/src/: lib.rs  main.rs
kernel/src/framebuffer/: mod.rs  renderer.rs
kernel/src/gdt/: mod.rs  tss.rs
kernel/src/interrupt/: interrupt_handler.rs  interrupts.rs  mod.rs
kernel/src/interrupt/apic/: ioapic.rs  lapic.rs  mod.rs  reg.rs  rsdp.rs
kernel/src/memory/: mod.rs
kernel/src/memory/alloc/: dummy_allocator.rs  mod.rs
kernel/src/memory/frame_alloc/: bootinfo_allocator.rs  empty_allocator.rs  mod.rs
kernel/src/memory/page/: mod.rs
kernel/src/renderer/: keyboard_interface.rs  mod.rs  serial.rs  text_renderer.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs
src/: main.rs
