[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x86_64 = "0.14.11"
spin = { version = "0.9.8", features = ["lazy"] }
bootloader_api = "0.11.6"
embedded-graphics = "0.8.1"
bootloader-x86_64-common = "0.11.6"
conquer-once = { version = "0.4.0", default-features = false }
