[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked_list_allocator = "0.10.5"
uart_16550 = "0.3.1"
x86_64 = "0.15.1"
spin = { version = "0.9.8", features = ["lazy"] }
bootloader_api = "0.11.7"
embedded-graphics = "0.8.1"
bootloader-x86_64-common = "0.11.7"
conquer-once = { version = "0.4.0", default-features = false }
acpi = "5.0.0"
x2apic = "0.4.3"
crossbeam-queue = {version = "0.3.11", default-features = false, features = ["alloc"]}
pc-keyboard = "0.7.0"
futures-util = { version = "0.3.30", default-features = false, features = ["alloc"]}
